--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -16,7 +16,7 @@
     <% @orders.each do |order| %>
       <tr>
         <td><%= order.bought_on %></td>
-        <td><%= order.canele_id %></td>
+        <td><%= @caneles.find{|canele| canele.id == order.canele_id}.name %></td>
         <td><%= order.count %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
