Modified to choose from a list of canele at the order

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :canele_id %><br>
-    <%= f.number_field :canele_id %>
+    <%= f.select :canele_id, @caneles.map{|canele| [canele.name, canele.id]} %>
   </div>
   <div class="field">
     <%= f.label :count %><br>
