Modified to show only canele for sale

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :bought_on %><br>
-    <%= f.date_select :bought_on %>
+    <%= @order.bought_on %>
   </div>
   <div class="field">
     <%= f.label :canele_id %><br>
