--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field">
     <%= f.label :bought_on %><br>
     <%= @order.bought_on %>
+    <%= hidden_field_tag 'bought_on', @order.bought_on %>
   </div>
   <div class="field">
     <%= f.label :canele_id %><br>
