--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CANELEduJAPON</title>
+  <title>CANELÉ du JAPON</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<div id="header">
+<%= image_tag "canele_du_japon.png", alt: "CANELÉ du JAPON" %>
+</div>
 
 <%= yield %>
 
